WebCore/dom/Node.cpp
@@ -2827,6 +2827,27 @@ void Node::defaultEventHandler(Event* event)
         if (event->isTextEvent())
             if (Frame* frame = document()->frame())
                 frame->eventHandler()->defaultTextInputEventHandler(static_cast<TextEvent*>(event));
+#if ENABLE(PAN_SCROLLING)
+    } else if (eventType == eventNames().mousedownEvent) {
+        MouseEvent* mouseEvent = static_cast<MouseEvent*>(event);
+        if (mouseEvent->button() == MiddleButton && !this->isLink()) {
+            RenderObject* renderer = this->renderer();
+
+            while (renderer && (!renderer->isBox() || !toRenderBox(renderer)->canBeScrolledAndHasScrollableArea())) {
+                // FIXME: If we start in a frame that can't scroll, we don't want to jump out of it to start scrolling:
+                // <https://bugs.webkit.org/show_bug.cgi?id=32399>.
+                if (!renderer->parent() && renderer->node() == renderer->document() && renderer->document()->ownerElement())
+                    renderer = renderer->document()->ownerElement()->renderer();
+                else
+                    renderer = renderer->parent();
+            }
+
+            if (renderer) {
+                if (Frame* frame = renderer->document()->frame())
+                    frame->eventHandler()->startPanScrolling(renderer);
+            }
+        }
+#endif
     }
 }
 
